Ajout App.css et modifications Header, Banner, Footer.css

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,5 +1,5 @@
 header {
-    margin: 30px 40px 50px;
+    margin-bottom: 50px;
 }
 
 header nav {
@@ -11,6 +11,7 @@ header nav {
 header nav .logo-kasa img {
     width: 100%;
     height: 70px;
+    margin-left: -6px;
 }
 
 header nav ul {
@@ -25,9 +26,7 @@ header nav ul a {
 header nav ul li {
     font-size: 24px;
     font-weight: 500;
-    font-family: 'Montserrat', sans-serif;
     color: #ff6060;
-    margin-right: 7px;
     margin-left: 50px;
 }
 
