--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -1,22 +1,20 @@
 .banner {
     display: flex;
     justify-content: center;
-    margin-top: 50px;
 }
 
 .banner-home {
-    width: 92%;
-    height: 190px;
+    width: 100%;
+    height: 223px;
     object-fit: cover;
     border-radius: 25px;
     filter: brightness(0.7);
 }
 
-.banner-title{
-    font-family: 'Montserrat', sans-serif;
+.banner h1{
     font-weight: 500;
     font-size: 48px;
     color: white;
     position: absolute;
-    padding-top: 20px;
+    padding-top: 50px;
 }
