--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -6,19 +6,21 @@
 }
 
 .div-card {
+    position: absolute;
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
 
-.card-img {
+.card img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
 }
 
-.div-card h2 {
+.card h2 {
     position: absolute;
     color: white;
     font-weight: 500;
