--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -6,6 +6,9 @@ header nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 header nav .logo-kasa img {
