--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,8 +3,8 @@
 }
 
 body {
-    max-width: 1440px;
+    max-width: 1400px;
     font-family: 'Montserrat', sans-serif;
     margin: auto;
-    padding: 40px;
+    padding: 0;
 }
