--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -4,7 +4,6 @@
     grid-gap: 50px;
     background-color: #F7F7F7;
     border-radius: 25px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin: 50px 40px 50px 40px;
     padding: 40px 30px;
 }
