--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,17 +3,17 @@ header {
 }
 
 header nav {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 20px;
-    margin-left: 40px;
-    margin-right: 40px;
+    padding-top: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 header nav .logo-kasa img {
-    width: 100%;
-    height: 90px;
+    height: 80px;
     margin-left: -6px;
 }
 
