--- a/src/styles/HousingHost.css
+++ b/src/styles/HousingHost.css
@@ -1,9 +1,7 @@
 .housing-host {
     display: flex;
-    justify-content: flex-end;
     align-items: center;
-    margin-top: -70px;
-    margin-right: 40px;
+    margin-top: 15px;
 }
 
 .housing-host h3 {
@@ -13,7 +11,7 @@
     font-size: 18px;
     text-align: right;
     color: #FF6060;
-    margin-right: 10px;
+    margin: 0 10px;
 }
 
 .housing-host img {
