--- a/src/styles/HousingTitle.css
+++ b/src/styles/HousingTitle.css
@@ -2,12 +2,12 @@
     color: #FF6060;
     font-weight: 500;
     font-size: 36px;
-    margin: 20px 0 0 40px;
+    margin: 0;
 }
 
 .housing-location {
     color: #FF6060;
     font-weight: 500;
     font-size: 18px;
-    margin: 0 0 0 40px;
+    margin: 0;
 }
