--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,30 +1,7 @@
-.collapse-about {
-    margin-inline: 25px;
+.about-title-collapse {
+    width: 80%;
 }
 
-.title-collapse {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 85%;
-    height: 47px;
-    background-color: #FF6060;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 30px;
-    padding: 5px 30px 5px 20px;
-}
-
-.text-collapse {
-    display: flex;
-    align-items: center;
-    width: 85%;
-    color: #FF6060;
-    font-weight: 400;
-    font-size: 24px;
-    background-color: #F7F7F7;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 0;
-    padding: 25px 20px 15px 20px;
+.about-text-collapse {
+    width: 80%;
 }
