--- a/src/styles/Collapse.css
+++ b/src/styles/Collapse.css
@@ -5,7 +5,37 @@
 }
 
 .collapse-title {
+    color: white;
     font-weight: 500;
     font-size: 24px;
+}
+
+.chevron {
     color: white;
+    font-size: 22px;
+}
+
+.classTitleCollapse {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 47px;
+    background-color: #FF6060;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 30px;
+    padding: 5px 30px 5px 20px;
+}
+
+.classTextCollapse {
+    display: flex;
+    align-items: center;
+    color: #FF6060;
+    font-weight: 400;
+    font-size: 24px;
+    background-color: #F7F7F7;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 0;
+    padding: 25px 20px 15px 20px;
 }
