Ajout Collapse dans Logements et petites modifications Carousel et About

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,7 +1,5 @@
-.about-title-collapse {
-    width: 80%;
-}
-
-.about-text-collapse {
-    width: 80%;
+.about-collapse {
+    display: flex;
+    flex-direction: column;
+    margin-inline: 100px;
 }
