--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -28,13 +28,13 @@
     top: 40%;
 }
 
-.carousel-prev,
-.carousel-next {
-    width: 46px;
-    height: 79px;
+.left-chevron,
+.right-chevron {
+    color: white;
+    font-size: 80px;
     cursor: pointer;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .carousel-counter {
