--- a/src/styles/Collapse.css
+++ b/src/styles/Collapse.css
@@ -1,10 +1,21 @@
 .collapse {
+    cursor: pointer;
+    margin-top: 25px;
+}
+
+.collapse-content {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    background-color: #FF6060;
+    height: 47px;
+    border-radius: 5px;
+    padding: 0 20px 0 20px;
 }
 
 .collapse-title {
+    display: flex;
+    align-items: center;
     color: white;
     font-weight: 500;
     font-size: 24px;
@@ -15,27 +26,13 @@
     font-size: 22px;
 }
 
-.classTitleCollapse {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 47px;
-    background-color: #FF6060;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 30px;
-    padding: 5px 30px 5px 20px;
-}
-
-.classTextCollapse {
-    display: flex;
-    align-items: center;
+.collapse-text {
+    display: block;
+    background-color: #f7f7f7;
     color: #FF6060;
+    border-radius: 5px;
     font-weight: 400;
     font-size: 24px;
-    background-color: #F7F7F7;
-    border-radius: 5px;
-    cursor: pointer;
     margin: 0;
     padding: 25px 20px 15px 20px;
 }
