--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -1,22 +1,31 @@
 .banner {
-    display: flex;
-    justify-content: center;
-    padding-left: 40px;
-    padding-right: 40px;
+   position: relative;
+   height: 223px;
+   margin: 0 40px;
 }
 
-.banner-home {
+.banner .banner-home {
+    position: absolute;
     width: 100%;
-    height: 223px;
-    object-fit: cover;
+    height: 100%;
     border-radius: 25px;
+}
+
+.banner img {
+    width: 100%;
+    height: 100%;
+    border-radius: 25px;
+    object-fit: cover;
     filter: brightness(0.7);
 }
 
 .banner h1 {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
     font-weight: 500;
     font-size: 48px;
     color: white;
-    position: absolute;
-    padding-top: 50px;
+    top: 35%;
 }
