--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -25,7 +25,7 @@
     color: white;
     font-weight: 500;
     font-size: 18px;
-    bottom: 2px;
-    left: 13px;
+    bottom: 5%;
+    left: 5%;
     line-height: 26px;
 }
