--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,19 +1,18 @@
 footer {
-    width: 100%;
     background: black;
     color: white;
     font-size: 18px;
     text-align: center;
     margin-top: 50px;
-    padding: 60px 0 10px 0;
+    padding: 80px 0 30px;
 }
 
 footer img {
     height: 50px;
+    margin-bottom: 40px;
 }
 
 footer p {
     font-weight: 500;
     font-size: 24px;
-    padding-top: 15px;
 }
