--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,20 +1,19 @@
 header {
-    margin-bottom: 50px;
+    margin: 30px 40px 50px;
 }
 
 header nav {
-    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 20px;
-    padding-left: 40px;
-    padding-right: 40px;
+}
+
+header nav .logo-kasa {
+    height: 70px;
 }
 
 header nav .logo-kasa img {
-    height: 80px;
-    margin-left: -6px;
+    width: 100%;
 }
 
 header nav ul {
@@ -22,15 +21,16 @@ header nav ul {
     list-style: none;
 }
 
-header nav ul a {
+header nav ul li a {
     text-decoration: none;
+    color: #ff6060;
 }
 
 header nav ul li {
     font-size: 24px;
     font-weight: 500;
     color: #ff6060;
-    margin-left: 50px;
+    margin-left: 60px;
 }
 
 header nav ul a.nav-active {
