--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -3,3 +3,9 @@
     flex-direction: column;
     margin-inline: 100px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+    .about-collapse {
+        margin-inline: 0;
+    }
+}
