--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,7 +6,18 @@
     padding: 0;
 }
 
+body {
+    margin: 0;
+}
+
 main {
     padding-left: 40px;
     padding-right: 40px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    main {
+        padding-left: 20px;
+        padding-right: 20px
+    }
 }
