--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -8,11 +8,27 @@ footer {
 }
 
 footer img {
-    height: 50px;
+    height: 40px;
     margin-bottom: 40px;
 }
 
 footer p {
     font-weight: 500;
     font-size: 24px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+    footer {
+        margin-top: 20px;
+        padding: 60px 0 30px;
+    }
+
+    footer img {
+        height: 35px;
+        margin-bottom: 10px;
+    }
+
+    footer p {
+        font-size: 12px;
+    }
 }
