--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -4,6 +4,23 @@
     grid-gap: 50px;
     background-color: #F7F7F7;
     border-radius: 25px;
-    margin: 50px 40px 50px 40px;
+    margin: 50px 40px;
     padding: 40px 30px;
+}
+
+@media screen and (max-width: 768px) {
+    .gallery {
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 35px;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .gallery {
+        grid-template-columns: 1fr;
+        grid-gap: 20px;
+        background: white;
+        margin: 20px;
+        padding: 0;
+    }
 }
