--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -23,17 +23,42 @@ header nav ul {
 
 header nav ul li a {
     text-decoration: none;
-    color: #ff6060;
 }
 
-header nav ul li {
+header nav ul li a {
     font-size: 24px;
     font-weight: 500;
     color: #ff6060;
     margin-left: 60px;
 }
 
-header nav ul a.nav-active {
-    text-decoration-line: underline;
-    color: #ff6060;
+header nav ul li a.nav-active {
+    text-decoration: underline;
+}
+
+@media screen and (max-width: 700px) {
+    header {
+        margin: 20px;
+    }
+
+    header nav {
+        width: 100%;
+    }
+
+    header nav .logo-kasa {
+        height: 70px;
+        width: 40%;
+        display: flex;
+        align-items: center;
+    }
+
+    header nav ul {
+        width: 60%;
+        justify-content: flex-end;
+    }
+
+    header nav ul li a {
+        font-size: 12px;
+        margin-left: 20px;
+    }
 }
