--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -1,17 +1,16 @@
 .banner {
     position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #c4c4c4;
+    border-radius: 25px;
     height: 223px;
     margin: 0 40px;
 }
 
-.banner .banner-home {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: 25px;
-}
-
-.banner img {
+.img-home {
     width: 100%;
     height: 100%;
     border-radius: 25px;
@@ -20,9 +19,9 @@
 }
 
 .banner h1 {
+    position: absolute;
     display: flex;
     justify-content: center;
-    position: absolute;
     width: 100%;
     font-weight: 500;
     font-size: 48px;
@@ -30,9 +29,14 @@
     top: 35%;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
     .banner {
         height: 190px;
+        margin: 0 20px;
+    }
+
+    .img-home {
+        border-radius: 15px;
     }
 
     .banner h1 {
@@ -43,12 +47,19 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .banner {
         height: 111px;
-        margin: 0 20px;
+        margin: 0 15px;
+    }
+
+    .img-home {
+        border-radius: 10px;
     }
 
     .banner h1 {
+        width: 217px;
         font-size: 24px;
-        padding-left: 10px;
-        padding-right: 50px;
+        left: 15px;
+        line-height: 100%;
+        margin-top: -10px;
+
     }
 }
