--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -1,30 +1,27 @@
 .carousel {
-    width: 100%;
-    height: 415px;
     position: relative;
-}
-
-.carousel-pictures {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
+    background-color: #c4c4c4;
+    border-radius: 25px;
+    height: 415px;
 }
 
 .carousel-img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
     border-radius: 25px;
+    object-fit: cover;
 }
 
 .carousel-arrows {
+    position: absolute;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    position: absolute;
     top: 40%;
 }
 
@@ -50,4 +47,48 @@
     bottom: 7%;
     left: 50%;
     transform: translateX(-50%);
+}
+
+@media screen and (max-width: 768px) {
+    .carousel {
+        height: 350px;
+    }
+
+    .carousel-img {
+        border-radius: 15px;
+    }
+
+    .carousel-arrows {
+        top: 45%;
+    }
+
+    .left-chevron,
+    .right-chevron {
+        font-size: 40px;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 426px) {
+    .carousel {
+        height: 255px;
+    }
+
+    .carousel-img {
+        border-radius: 10px;
+    }
+
+    .carousel-arrows {
+        top: 45%;
+    }
+
+    .left-chevron,
+    .right-chevron {
+        font-size: 30px;
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+    .carousel-counter {
+        display: none;
+    }
 }
