--- a/src/styles/Collapse.css
+++ b/src/styles/Collapse.css
@@ -10,7 +10,7 @@
     background-color: #FF6060;
     height: 47px;
     border-radius: 5px;
-    padding: 0 20px 0 20px;
+    padding: 0 20px 0 10px;
 }
 
 .collapse-title {
@@ -34,10 +34,33 @@
     font-weight: 400;
     font-size: 24px;
     margin: 0;
-    padding: 25px 20px 15px 20px;
+    padding: 20px 20px 15px 20px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 768px) {
+    .collapse {
+        margin-top: 20px;
+    }
+
+    .collapse-content {
+        height: 30px;
+        padding: 0 10px 0 10px;
+    }
+
+    .collapse-title {
+        font-size: 18px;
+    }
+
+    .chevron {
+        font-size: 15px;
+    }
+
+    .collapse-text {
+        font-size: 18px;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 556px) {
     .collapse {
         margin-top: 20px;
     }
@@ -57,6 +80,6 @@
 
     .collapse-text {
         font-size: 12px;
-        padding: 15px 0 40px 10px;
+        padding: 15px 10px 10px 10px;
     }
 }
