--- a/src/styles/Error404.css
+++ b/src/styles/Error404.css
@@ -8,8 +8,8 @@
 .title-error {
     font-weight: 700;
     font-size: 288px;
-    margin-top: 90px;
-    margin-bottom: 0;
+    margin-top: 60px;
+    margin-bottom: 60px;
 }
 
 .subtitle-error {
@@ -23,4 +23,49 @@
     text-decoration-line: underline;
     color: #FF6060;
     margin-top: 120px;
+    margin-bottom: 90px;
+}
+
+@media screen and (min-width: 769px) and (max-width: 1023px) {
+    .subtitle-error {
+        display: flex;
+        align-items: flex-end;
+        text-align: center;
+    }
+}
+
+@media screen and (min-width: 555px) and (max-width: 768px) {
+    .title-error {
+        font-size: 200px;
+    }
+
+    .subtitle-error {
+        display: flex;
+        align-items: flex-end;
+        text-align: center;
+        font-size: 20px;
+    }
+
+    .link-error {
+        font-size: 16px;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 555px) {
+    .title-error {
+        font-size: 96px;
+        margin-top: 70px;
+        margin-bottom: 90px;
+    }
+
+    .subtitle-error {
+        display: flex;
+        align-items: flex-end;
+        text-align: center;
+        font-size: 18px;
+    }
+
+    .link-error {
+        font-size: 14px;
+    }
 }
