--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,10 +1,12 @@
 footer {
+    width: 100%;
+    height: 209px;
     background: black;
     color: white;
     font-size: 18px;
     text-align: center;
-    margin-top: 50px;
-    padding: 80px 0 30px;
+    margin-top: 40px;
+    padding-top: 60px;
 }
 
 footer img {
@@ -17,14 +19,30 @@ footer p {
     font-size: 24px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
     footer {
-        margin-top: 20px;
-        padding: 60px 0 30px;
+        height: 150px;
+        margin-top: 30px;
     }
 
     footer img {
         height: 35px;
+        margin-bottom: 15px;
+    }
+
+    footer p {
+        font-size: 18px;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    footer {
+        height: 209px;
+        margin-top: 20px;
+        padding-top: 65px;
+    }
+
+    footer img {
         margin-bottom: 10px;
     }
 
