--- a/src/styles/Tag.css
+++ b/src/styles/Tag.css
@@ -6,7 +6,7 @@
     background: #FF6060;
     color: white;
     border-radius: 10px;
-    width: 115px;
+    width: 150px;
     margin-right: 10px;
     padding: 5px;
 }
@@ -14,6 +14,29 @@
 .tag h4 {
     font-weight: 500;
     font-size: 14px;
-    line-height: 20px;
     margin: 0;
+}
+
+@media screen and (max-width: 555px) {
+    .tag {
+        width: 84px;
+        border-radius: 5px;
+    }
+
+    .tag h4 {
+        font-size: 10px;
+        line-height: 14px;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 426px) {
+    .tag {
+        width: 84px;
+        border-radius: 5px;
+    }
+
+    .tag h4 {
+        font-size: 10px;
+        line-height: 14px;
+    }
 }
