--- a/src/styles/Collapse.css
+++ b/src/styles/Collapse.css
@@ -21,15 +21,27 @@
     font-size: 24px;
 }
 
-.chevron {
+.up,
+.down {
     color: white;
     font-size: 22px;
+}
+
+.collapse-content i {
+    transition: 0.3s all;
+}
+
+.collapse-content i.up {
+    transform: rotate(180deg);
+    transition: 0.3s all;
 }
 
 .collapse-text {
     display: block;
     background-color: #f7f7f7;
     color: #FF6060;
+    min-height: 300px;
+    line-height: 26px;
     border-radius: 5px;
     font-weight: 400;
     font-size: 24px;
@@ -51,12 +63,14 @@
         font-size: 18px;
     }
 
-    .chevron {
+    .up,
+    .down {
         font-size: 15px;
     }
 
     .collapse-text {
-        font-size: 18px;
+        font-size: 16px;
+        min-height: 200px;
     }
 }
 
@@ -74,12 +88,14 @@
         font-size: 13px;
     }
 
-    .chevron {
+    .up,
+    .down {
         font-size: 15px;
     }
 
     .collapse-text {
         font-size: 12px;
         padding: 15px 10px 10px 10px;
+        min-height: 150px;
     }
 }
