Modifications CSS Media queries et mise en forme fichiers

--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -68,7 +68,7 @@
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 426px) {
+@media screen and (max-width: 426px) {
     .carousel {
         height: 255px;
     }
