--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -38,7 +38,7 @@
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .about-collapse {
         margin-inline: 0;
     }
