--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,21 +1,22 @@
 * {
     box-sizing: border-box;
-    max-width: 1440px;
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
 }
 
 body {
-    margin: 0;
+    margin: 0 auto;
 }
 
 main {
+    max-width: 1440px;
+    margin: auto;
     padding-left: 40px;
     padding-right: 40px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
     main {
         padding-left: 20px;
         padding-right: 20px
