--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -29,25 +29,38 @@
     top: 35%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 740px) and (max-width: 1024px) {
     .banner {
         height: 190px;
-        margin: 0 20px;
-    }
-
-    .img-home {
-        border-radius: 15px;
+        margin: 0 40px;
     }
 
     .banner h1 {
-        font-size: 38px;
+        font-size: 44px;
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 425px) and (max-width: 740px) {
+
     .banner {
         height: 111px;
         margin: 0 15px;
+    }
+
+    .img-home {
+        border-radius: 10px;
+    }
+
+    .banner h1 {
+        font-size: 34px;
+    }
+}
+
+@media screen and (max-width: 555px) {
+    .banner {
+        height: 111px;
+        margin-left: 15px;
+        margin-right: 15px;
     }
 
     .img-home {
