--- a/src/styles/Collapse.css
+++ b/src/styles/Collapse.css
@@ -75,7 +75,7 @@
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 556px) {
+@media screen and (max-width: 556px) {
     .collapse {
         margin-top: 20px;
     }
