--- a/src/styles/Error404.css
+++ b/src/styles/Error404.css
@@ -51,7 +51,7 @@
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 555px) {
+@media screen and (max-width: 555px) {
     .title-error {
         font-size: 96px;
         margin-top: 70px;
