--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -35,7 +35,7 @@ footer p {
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     footer {
         height: 209px;
         margin-top: 20px;
