--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,11 +1,16 @@
 header {
-    margin: 30px 40px 50px;
+    max-width: 1440px;
+    margin: auto;
+    height: 150px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 header nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 100%;
 }
 
 header nav .logo-kasa {
@@ -37,10 +42,6 @@ header nav ul li a.nav-active {
 }
 
 @media screen and (max-width: 768px) {
-    header {
-        margin: 20px 20px 15px 20px;
-    }
-
     header nav .logo-kasa img {
         width: 85%;
     }
@@ -50,9 +51,11 @@ header nav ul li a.nav-active {
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 555px) {
+@media screen and (max-width: 740px) {
     header {
-        margin: 10px 20px 0 20px;
+        height: 100px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 
     header nav {
