--- a/src/styles/HousingHost.css
+++ b/src/styles/HousingHost.css
@@ -18,7 +18,7 @@
     border-radius: 50px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 554px) {
+@media screen and (max-width: 554px) {
     .housing-host h3 {
         width: 15vw;
         font-size: 12px;
