--- a/src/styles/HousingTitle.css
+++ b/src/styles/HousingTitle.css
@@ -18,7 +18,7 @@
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 555px) {
+@media screen and (max-width: 555px) {
     .housing-title {
         font-size: 18px;
         line-height: 26px;
