--- a/src/styles/Tag.css
+++ b/src/styles/Tag.css
@@ -29,7 +29,7 @@
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 426px) {
+@media screen and (max-width: 426px) {
     .tag {
         width: 84px;
         border-radius: 5px;
