--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -4,15 +4,14 @@
     grid-gap: 50px;
     background-color: #F7F7F7;
     border-radius: 25px;
-    margin: 40px 40px;
-    padding: 40px 30px;
+    margin-top: 40px;
+    padding: 40px 40px;
 }
 
 @media screen and (max-width: 1000px) {
     .gallery {
         grid-template-columns: 1fr 1fr;
         grid-gap: 35px;
-        margin: 40px 40px;
     }
 }
 
@@ -21,7 +20,6 @@
         grid-template-columns: 1fr;
         grid-gap: 20px;
         background: white;
-        margin: 15px;
         padding: 0;
     }
 }
